<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    android:orientation="vertical"
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">
    <com.facebook.shimmer.ShimmerFrameLayout
        android:id="@+id/shimmer_view_container"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="15dp"
        android:orientation="vertical">

        <!-- Adding 7 rows of placeholders -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <include layout="@layout/data_place_holder" />
            <include layout="@layout/data_place_holder" />
            <include layout="@layout/data_place_holder" />
            <include layout="@layout/data_place_holder" />
            <include layout="@layout/data_place_holder" />
            <include layout="@layout/data_place_holder" />
            <include layout="@layout/data_place_holder" />
        </LinearLayout>

    </com.facebook.shimmer.ShimmerFrameLayout>
    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/rv_grievance"></android.support.v7.widget.RecyclerView>
</LinearLayout>