...
                android:id="@+id/rv_received_update_table"></android.support.v7.widget.RecyclerView>
            <TextView
                android:layout_margin="8dp"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Submit"
                android:id="@+id/tv_submit"
                android:background="@drawable/ed_border_box_linear"
                android:textColor="@android:color/white"
                android:fontFamily="@font/aladin"
                android:layout_gravity="center"
                android:gravity="center"
                android:padding="8dp"
...
